Fix absolute positioning of tables.  Bug 262898, r+sr=roc